[package]
name = "superheap"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.32.1"
rss = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
time = { version = "0.3.37", features = ["formatting", "parsing"] }
anyhow = "1.0.95"
mail-parser = "0.9.4"
